test/files/neg/forgot-interpolator.check
forgot-interpolator.scala:4: warning: `$bippy` looks like an interpolated identifier! Did you forget the interpolator?
  def f = "Put the $bippy in the $bippy!" // warn 1
          ^
forgot-interpolator.scala:14: warning: That looks like an interpolated expression! Did you forget the interpolator?
  def f = """Put the ${println("bippy")} in the bippy!""" // warn 2
          ^
forgot-interpolator.scala:30: warning: `$beppo` looks like an interpolated identifier! Did you forget the interpolator?
      def f = "$beppo was a marx bros who saw dollars."  // warn 3
              ^
forgot-interpolator.scala:34: warning: `$aleppo` looks like an interpolated identifier! Did you forget the interpolator?
    def f = "$aleppo is a pepper and a city."     // warn 4
            ^
forgot-interpolator.scala:47: warning: `$hippo` looks like an interpolated identifier! Did you forget the interpolator?
    def h = "$hippo takes an implicit"  // warn 6
            ^
forgot-interpolator.scala:88: warning: `$groucho` looks like an interpolated identifier! Did you forget the interpolator?
    def f2 = "I salute $groucho" // warn 7
             ^
forgot-interpolator.scala:89: warning: `$dingo` looks like an interpolated identifier! Did you forget the interpolator?
    def f3 = "I even salute $dingo" // warn 8
             ^
forgot-interpolator.scala:90: warning: `$calico` looks like an interpolated identifier! Did you forget the interpolator?
    def f4 = "I also salute $calico" // warn 9
             ^
error: No warnings can be incurred under -Xfatal-warnings.
8 warnings found
one error found
